cmake_minimum_required(VERSION 3.0.2)
project(voice_broadcaster)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++14)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  message_generation
)

## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
#   Message1.msg
#   Message2.msg
# )

## Generate services in the 'srv' folder
add_service_files(
  FILES
  VoiceChange.srv
)

generate_messages(
  DEPENDENCIES
  std_msgs
)
